womtool/src/test/resources/validate/wdl_draft2/invalid/duplicate_task_names/duplicate_task_names.wdl
workflow Hello {

    call HelloWorld

    output {
        String message=HelloWorld.out
    }
}

task HelloWorld{
    command {
        echo "hello"
    }
    output {
        String out = stdout()
    }
}

task HelloWorld{
    command {
        echo "goodbye"
    }
    output {
        String out = stdout()
    }
}
